src/objects/FUR_object__c.object
<CustomObject>
    <fields>
        <fullName>FUR_formula_field1__c</fullName>
        <description>DEscription</description>
        <formula>FUR_number_field1__c + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FUR_formula_field1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FUR_number_field1__c</fullName>
        <label>FUR_number_field1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FUR_text_field1__c</fullName>
        <defaultValue>$User.City</defaultValue>
        <label>FUR_text_field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>FUR_objects</relationshipLabel>
        <relationshipName>FUR_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subtype__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <label>FUR_object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Another_custom_list_view</fullName>
        <columns>NAME</columns>
        <columns>FUR_number_field1__c</columns>
        <filterScope>Mine</filterScope>
        <label>Another custom list view</label>
    </listViews>
    <listViews>
        <fullName>FUR_List_view</fullName>
        <columns>NAME</columns>
        <columns>FUR_formula_field1__c</columns>
        <columns>FUR_number_field1__c</columns>
        <columns>FUR_text_field1__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FUR_text_field1__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>FUR_number_field1__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Awesome custom list</label>
    </listViews>
    <listViews>
        <fullName>My_list_with_minimum_info</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FUR_number_field1__c</field>
            <operation>lessThan</operation>
            <value>17</value>
        </filters>
        <label>My list with minimum info</label>
    </listViews>
    <nameField>
        <label>FUR_object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FUR_objects</pluralLabel>
    <recordTypes>
        <fullName>FUR_record_type</fullName>
        <active>true</active>
        <label>FUR_record_type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FUR_VR1</fullName>
        <active>true</active>
        <errorConditionFormula>FUR_text_field1__c  &lt;&gt; &quot;Test&quot;</errorConditionFormula>
        <errorDisplayField>FUR_text_field1__c</errorDisplayField>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FUR_VR2</fullName>
        <active>true</active>
        <errorConditionFormula>FUR_number_field1__c  = 0</errorConditionFormula>
        <errorDisplayField>FUR_number_field1__c</errorDisplayField>
        <errorMessage>Test</errorMessage>
    </validationRules>
</CustomObject>